tests/NormalTests/paczka1/fuzzy1/17781071.err
Error in line 7: S6 S6 0,0
Error in line 12: S6 A144 87,6
Error in line 17: S6 A144 356,5
Error in line 6: OJWL3n8 S552 20,5
Error in line 10: dakuYN3p A225 68,1
Error in line 21: 5FbzxOD A225 73,4
Error in line 30: OJWL3n8 A225 116,4
